--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "disneyplus-brand",
+  "name": "@disneyplus/disneyplus-brand",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --port 9004",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "serve:standalone": "vue-cli-service serve --mode standalone"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "single-spa-vue": "^2.1.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -18,6 +20,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "vue-cli-plugin-single-spa": "~3.1.2",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
